# ardupilot

./: .gitignore  .gitmodules  README.md  build_and_upload.sh  copter_dynamics.py  demo.param  demo_params.param  generate_controller.py  get_motor_info.py  setup_roscopter.py  utility.py
ArduCopter/: ArduCopter.cpp  Copter.cpp  Copter.h  GCS_Mavlink.cpp  Log.cpp  Parameters.cpp  config.h  defines.h  sensors.cpp  switches.cpp  system.cpp
libraries/AP_Baro/: AP_Baro.cpp  AP_Baro.h  AP_Baro_HIL.cpp
libraries/AP_Motors/: AP_Motors6DOF.cpp  AP_Motors6DOF.h  AP_MotorsMatrix.cpp  AP_MotorsMatrix.h  AP_Motors_Class.h
mit_msgs/: CMakeLists.txt  package.xml
motor_test/: discrete_measurement.js
motor_test/t_motor_air2216/: motor_test_01.csv  motor_test_02.csv  motor_test_03.csv  motor_test_04.csv  motor_test_05.csv  motor_test_06.csv  motor_test_07.csv
roscopter/: CMakeLists.txt  package.xml
roscopter/msg/: MocapPosition.msg
roscopter/nodes/: derivative_filter.py  roscopter_node.py  simulate_vicon_topic.py
user_guide/: quad_alt_pid.py
